--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,33 @@
-<p>dashboard works!</p>
+
 
 <div class="mainContainer">
-  <div class="leftConatiner">
+  <div class="topConatiner">
 
-    <button mat-raised-button color="warn" (click)="logoutComponet()">Logout</button>
-    
+    <nav class="navbar navbar-expand-lg " style="background-color: #e3f2fd;">
+      <div class="container-fluid">
+        <a class="navbar-brand" >MY APP LOGO</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" routerLink="createEmployee">Create emplyee</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active">All employees</a>
+            </li>
+          </ul>
+          <button mat-raised-button color="warn" (click)="logoutComponet()">Logout</button>
+          
+        </div>
+      </div>
+    </nav>
   </div>
-  <div class="rightContainer">
+  <div class="bottomContainer">
     <router-outlet></router-outlet>
 
   </div>
