--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
               <a class="nav-link active" routerLink="createEmployee">Create emplyee</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active">All employees</a>
+              <a class="nav-link active" routerLink="allEmployees">All employees</a>
             </li>
           </ul>
           <button mat-raised-button color="warn" (click)="logoutComponet()">Logout</button>
