Search functionality completedin allEmployees component

--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -55,7 +55,7 @@
             <input type="number" formControlName="year"/><br />
             <label for="">percentage :</label>
             <input type="number" formControlName="percentage" /><br />
-            <button class="btn btn-danger" (click)="delete(i)">delete</button>
+            <button class="btn btn-danger" (click)="deleteHikeCardComponent(i)">delete</button>
             <hr>
 
         </div>
