--- a/src/app/all-employees/all-employees.component.html
+++ b/src/app/all-employees/all-employees.component.html
@@ -1,6 +1,8 @@
 <!-- <p>all-employees works!</p> -->
 
-<button (click)="getEmployeesComponent()">Show all employees</button>
+<!-- <button (click)="getEmployeesComponent()">Show all employees</button> -->
+<input type="text" placeholder="filter by searching a word..." (keyup)="filterComponent()" [(ngModel)]="searchWord">
+
 <table class="table table-success table-striped">
     <thead>
         <tr>
@@ -31,17 +33,17 @@
             <td>{{emp.email}}</td>
             <td [ngStyle]="{color:emp.package>900000?'green':'red'}">{{emp.package}}</td>
             <td>{{emp.dob}}</td>
-            <td>{{emp.address.addressLine}},
-               {{emp.address.city}},
-                {{emp.address.state}},
-                {{emp.address.pincode}}</td>
-            <td>{{emp.hikes.year}},
-                {{emp.hikes.percentage}}
+            <td>{{emp.address?.addressLine}},
+               {{emp.address?.city}},
+                {{emp.address?.state}},
+                {{emp.address?.pincode}}</td>
+            <td>{{emp.hikes?.year}},
+                {{emp.hikes?.percentage}}
             </td>
             <td>{{emp.workMode}}</td>
             <td>{{emp.gender}}</td>
             <td class="">
-                <button class="btn btn-danger" (click)="delete(i)">delete</button>
+                <button class="btn btn-danger" (click)="delete(emp.id)">delete</button>
                 <button class="btn btn-info">View</button>
 
             </td>
