--- a/src/app/all-employees/all-employees.component.html
+++ b/src/app/all-employees/all-employees.component.html
@@ -2,6 +2,34 @@
 
 <!-- <button (click)="getEmployeesComponent()">Show all employees</button> -->
 <input type="text" placeholder="filter by searching a word..." (keyup)="filterComponent()" [(ngModel)]="searchWord">
+<select name="" id="" [(ngModel)]="sortColumnName">
+    <option value="id">id</option>
+    <option value="name">name</option>
+    <option value="company">company</option>
+    <option value="role">role</option>
+    <option value="package">package</option>
+    <option value="workMode">workMode</option>
+    <option value="gender">gender</option>
+    
+</select>
+<select name="" id="" [(ngModel)]="sortOrder">
+
+    <option value="asc">Ascending</option>
+    <option value="desc">Descending</option>
+</select>
+<button (click)="sortComponent()" class="btn btn-warning">Sort</button>
+
+<select name="" id="" [(ngModel)]="pageLimit">
+    <option value="10">10</option>
+    <option value="20">20</option>
+    <option value="30">30</option>
+</select>
+<select name="" id="" [(ngModel)]="count">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+</select>
+<button (click)="paginationComponent()">Pagination</button>
 
 <table class="table table-success table-striped">
     <thead>
