--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -2,7 +2,15 @@
   <!-- <label for="">Id :</label>
 <input type="text"> -->
   <label for="">name :</label>
-  <input type="text" formControlName="name" /><br />
+  <input type="text" formControlName="name" />
+  <div *ngIf="employeeForm.get('name')?.touched && employeeForm.get('name')?.invalid">
+    <p *ngIf="employeeForm.get('name')?.errors?.['required']">Name is required</p>
+    <p *ngIf="employeeForm.get('name')?.errors?.['minlength']">Name minimum length is 5 characters</p>
+    <p *ngIf="employeeForm.get('name')?.errors?.['maxlength']">Name maximum length is 15 characters</p>
+
+  </div>
+  
+  <br />
   <label for="">company :</label>
   <input type="text" formControlName="company" /><br />
   <label for="">role :</label>
@@ -10,7 +18,13 @@
   <label for="">package :</label>
   <input type="number" formControlName="package" /><br />
   <label for="">email :</label>
-  <input type="email" formControlName="email" /><br />
+  <input type="email" formControlName="email" />
+  <div *ngIf="employeeForm.get('email')?.touched && employeeForm.get('email')?.invalid">
+    <p *ngIf="employeeForm.get('email')?.errors?.['required']">Email is reuired</p>
+    <p *ngIf="employeeForm.get('email')?.errors?.['email']">Email should have &#64; symbol</p>
+  </div>
+  
+  <br />
   <label for="">dob :</label>
   <input type="date" formControlName="dob" /><br />
 
@@ -22,7 +36,13 @@
     <label for="">state :</label>
     <input type="text" formControlName="state" /><br />
     <label for="pincode">pincode :</label>
-    <input id="pincode" type="number" formControlName="pincode" /><br />
+    <input id="pincode" type="number" formControlName="pincode" />
+    <div *ngIf="employeeForm.get('address')?.get('pincode')?.touched && employeeForm.get('address')?.get('pincode')?.invalid">
+      <p *ngIf="employeeForm.get('address')?.get('pincode')?.errors?.['required']">Pincode is required</p>
+      <p *ngIf="employeeForm.get('address')?.get('pincode')?.errors?.['min']">Pincode should have minimum 6 numbers</p>
+      <p *ngIf="employeeForm.get('address')?.get('pincode')?.errors?.['max']">Pincode should have maximum 6 numbers</p>
+    </div>
+    <br />
   </div>
 
   <label for="">Gender :</label>
@@ -36,6 +56,17 @@
   <label for="WFH">WFH</label>
   <input id="WFO" type="radio" name="workMode" value="WFO" formControlName="workMode" />
   <label for="WFO">WFO</label><br />
+
+  <div *ngIf="employeeForm.get('workMode')?.value=='WFH'">
+    <label for="">Wifi Bill :</label>
+    <input type="number" name="" id="" formControlName="wifiBill">
+  </div>
+
+  <div *ngIf="employeeForm.get('workMode')?.value=='WFO'">
+    <label for="">Travelling Bill :</label>
+    <input type="number" name="" id="" formControlName="travellingBill">
+  </div>
+
 
 
   <button
